--- a/index.html
+++ b/index.html
@@ -124,8 +124,9 @@
                 <h2>Bio</h2>
                 <p class="description">Léo Tosku, <span class="age" data-dob="2007-10-31">—</span> years old, living in Cannes, France.<br> 
                 <p class="description"><br>Born in France, I spent part of my life in the Caribbean before returning to Cannes to pursue my studies. I am currently studying Graphic Design at Ynov Sophia Campus, working towards a Bachelor's degree in Digital Project Leadership (Chef de Projet Digital, RNCP 6).</p></p>
-                <p class="description"><br>Passionate about digital creation, I specialize myself in graphic design. I enjoy crafting unique experiences and universes that blend creativity and functionality.</p>
-                
+                <p class="description"><br>Passionate about digital creation, I specialize myself in graphic design. I enjoy crafting unique experiences that blend creativity and functionality.</p>
+                <p class="description"><br>In addition to my studies, I am actively involved in various projects, both personal and collaborative, that allow me to apply my skills and explore new horizons in diverse fields.</p>
+                <p class="description"><br>I value creativity, functionality over speed. My perfectionist nature ensures that every project I undertake is of the highest quality. <br><br> For more information, please contact me on <a href="mailto:leotoskuepro@gmail.com">leotoskuepro@gmail.com</a>.</p>
 
                 <div class="experience-section">
                     <h2>Experiences</h2>
