--- a/index.html
+++ b/index.html
@@ -11,10 +11,9 @@
 <body class="no-scroll">
     
 <div class="navbar">
-    <img id="logo" src="Elements/image/logo.svg" Alt="Logo">
-    <div class="text-container">
-        <span class="name"><strong>Léo Tosku</strong></span>
-        <span class="description">3D & Web Design</span>
+    <div class="brand">
+        <img src="Elements/image/logo.svg" alt="Logo">
+        <div class="brand-name">Léo Tosku</div>
     </div>
     <div class="links-container">
         <!--Desktop-->
@@ -24,12 +23,12 @@
         <!-- <a href="#" class="link" id="art-link">Art</a> -->
         <a href="#" class="link" id="info-link">About</a>
         <a href="#" class="link" style="pointer-events: none;">|</a>
-        <a href="Elements/image/CV.pdf" target="_blank" class="download">CV<span class="material-symbols-outlined" style="font-size: 3.5vh;">download</span></a>
+        <a href="Elements/image/CV.pdf" target="_blank" class="link">CV<span class="material-symbols-outlined">download</span></a>
         <!--Mobile-->
         <a href="#" class="link-mobile" id="everything-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">dashboard</span></a>
         <!-- <a href="#" class="link-mobile" id="art-link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">landscape_2</span></a> -->
         <a href="#" class="link-mobile" id="info-link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">info</span></a>
-        <a href="Elements/image/CV.pdf" class="download-mobile" target="_blank"><span class="material-symbols-outlined" style="font-size: 3.5vh;">Description</span></a>
+        <a href="Elements/image/CV.pdf" class="link-mobile" target="_blank"><span class="material-symbols-outlined" style="font-size: 3.5vh;">Description</span></a>
     </div>
 </div>
 
@@ -42,12 +41,12 @@
     <div class="scrolling-bands">
         <div class="band band1">
             <div class="scrolling-text">
-                <p>Web Design • 3D Modeling • Unique Creations • Programming • Digital Design • </p>
+                <p>Web Design • Modeling • Unique Creations • Programming • Digital Design • </p>
             </div>
         </div>
         <div class="band band2">
             <div class="scrolling-text">
-                <p>Digital Design • Programming • Unique Creations • 3D Modeling • Web Design • </p>
+                <p>Digital Design • Programming • Unique Creations • Modeling • Web Design • </p>
             </div>
         </div>
     </div>    
@@ -137,7 +136,7 @@
 
                 <div class="interests-section">
                     <h2>Interests</h2>
-                    <p>Creative development • Open source • 3D development • Finance</p>
+                    <p>Creative development • Open source • Digital development • Finance</p>
                 </div>
             </div>
             
@@ -146,15 +145,6 @@
             </div>
         </div>
     </div>
-
-<!-- 3D Art Gallery -->
-<div id="art-gallery" style="display:none;">
-    <h1>My Artistic Creations</h1>
-    <div class="art-gallery-container">
-        <!-- Art items will be loaded dynamically -->
-    </div>
-</div>
-
 
 <!-- Website Gallery -->
 <div class="projects-section">
@@ -191,4 +181,3 @@
 <!-- Script -->
 <script src="script.js"></script>
 </body>
-</html>
