--- a/LSDP/index.html
+++ b/LSDP/index.html
@@ -107,7 +107,7 @@
         </video>
         
         <!-- Noise Overlay -->
-        <div class="bg"></div>
+        <div class="noise"></div>
         
         <!-- Hero Content -->
         <div class="hero-content">
