--- a/index.html
+++ b/index.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">    <title>L-Dev31</title>
-    <link rel="stylesheet" href="styles.css">
-    <link rel="stylesheet" href="styles-mobile.css">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
+    <title>L-Dev31</title>
+    <link rel="stylesheet" href="style.css">
     <link rel="icon" type="image/png" href="Elements/image/favicon.png">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&display=swap">
 </head>
 <body>
     
@@ -16,41 +18,33 @@
         <div class="brand-name"></div>
     </div>
     <div class="links-container">
-        <!--Desktop-->
         <a href="#" class="link" id="everything">All</a>
         <a href="#" class="link" id="personal-project">Personal Projects</a>
         <a href="#" class="link" id="commissions">Commissions</a>
         <a href="info.html" class="link">About</a>
 
-
-        <!--Mobile-->
-        <a href="#" class="link-mobile" id="everything-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">dashboard</span></a>
-        <!-- <a href="#" class="link-mobile" id="art-link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">landscape_2</span></a> -->
-        <a href="info.html" class="link-mobile"><span class="material-symbols-outlined" style="font-size: 3.5vh;">info</span></a>
-        <a href="Elements/image/CV.pdf" class="link-mobile" target="_blank"><span class="material-symbols-outlined" style="font-size: 3.5vh;">Description</span></a>
+        <a href="#" class="link-mobile" id="everything-mobile"><span class="material-symbols-outlined">dashboard</span></a>
+        <a href="info.html" class="link-mobile"><span class="material-symbols-outlined">info</span></a>
+        <a href="Elements/image/CV.pdf" class="link-mobile" target="_blank"><span class="material-symbols-outlined">Description</span></a>
     </div>
 </div>
 
-<div class="bg"></div>
+<div class="noise"></div>
 
 <section id="header">
     <div class="header-content">
-        <h1>Léo TOSKU</h1>
-                <div class="header-subtitles">
-                    <span class="city">CANNES</span>
-                    <span class="header-hour" id="header-hour">--:--</span>
-                </div>
+        <h1 id="site-title">Léo TOSKU</h1>
+        <div class="header-subtitles">
+            <span class="city">CANNES</span>
+            <span class="header-hour" id="header-hour">--:--</span>
         </div>
+    </div>
 </section>
 
-
-<!-- About Me Section -->
 <section id="about-me" class="about-me-section">
     <div class="about-me-container">
-        <div class="about-me-text">
-            <span>As a <strong>graphic designer</strong>, I help brands and projects create unique digital experiences</span>
-            <span>where <strong>creativity</strong>, <strong>precision</strong>, and <strong>functionality</strong> come together</span>
-            <span>to make a lasting impact.</span>
+        <div class="about-me-text" id="split-text">
+            As a <strong>graphic designer</strong>, I help brands and projects create unique digital experiences where <strong>creativity</strong>, <strong>precision</strong>, and <strong>functionality</strong> come together to make a lasting impact.
         </div>
         <div class="about-me-image">
             <img src="Elements/image/LéoTosku.jpg" alt="Léo Tosku portrait" />
@@ -58,6 +52,17 @@
     </div>
 </section>
 
-<!-- Script -->
+<div class="experience-list" id="companies-logos"></div>
+
+<video class="bg-video" src="Elements/image/bg.mp4" autoplay loop muted playsinline></video>
+
+<section id="featured-projects" class="featured-projects-section">
+  <h2 class="featured-title">Featured Projects</h2>
+  <div class="featured-list">
+    <!-- Les projets seront injectés ici par JS -->
+  </div>
+</section>
+
 <script src="script.js"></script>
 </body>
+</html>
