--- a/index.html
+++ b/index.html
@@ -31,15 +31,18 @@
 
 <div class="noise"></div>
 
-<video class="bg-video" src="Elements/image/bg.mp4" autoplay loop muted playsinline data-parallax-speed="25"></video>
+<video class="header-bg-video" src="Elements/image/bg.mp4" autoplay loop muted playsinline data-parallax-speed="25"></video>
 
 <section id="header">
     <div class="header-content">
         <h1 id="site-title">Léo TOSKU</h1>
         <div class="header-subtitles">
-            <span class="city">CANNES</span>
-            <span class="header-hour" id="header-hour">--:--</span>
+            <span>UI/UX Designer</span>
         </div>
+    </div>
+    <div class="header-status">
+        <span class="city">CANNES</span>
+        <span class="header-hour" id="header-hour">--:--</span>
     </div>
 </section>
 
@@ -48,8 +51,8 @@
         <div class="about-me-text" id="split-text">
             As a <strong>graphic designer</strong>, I help brands and projects create unique digital experiences where <strong>creativity</strong>, <strong>precision</strong>, and <strong>functionality</strong> come together to make a lasting impact.
         </div>
-        <div class="about-me-image" data-parallax-speed="90">
-            <img src="Elements/image/LéoTosku.jpg" data-parallax-speed="80" alt="Léo Tosku portrait" />
+        <div class="about-me-image" data-parallax-speed="95">
+            <img src="Elements/image/LéoTosku.jpg" data-parallax-speed="70" alt="Léo Tosku portrait" />
         </div>
     </div>
 </section>
@@ -63,9 +66,52 @@
   </div>
 </section>
 
-<section id="footer">
-    <div class="footer-content">
+<section id="my-story" class="my-story-section">
+    <h2 class="title">My Story</h2>
+    
+    <div class="story-container">
+        <div class="story-row reverse">
+            <div class="story-text">
+                <h3>Early Life & Origins</h3>
+                <div class="story-paragraph">Born in Grasse to Albanian and Dutch parents. Inspired by my grandmother, I taught myself art and coding from age 10.</div>
+            </div>
+            <div class="story-image">
+                <img src="Elements/image/story1.jpg" data-parallax-speed="90" alt="Caribbean Era">
+            </div>
+        </div>
+
+        <div class="story-row">
+            <div class="story-text">
+                <h3>Caribbean Entrepreneurship</h3>
+                <div class="story-paragraph">At age 14, I moved to Guadeloupe. By 17, I founded "Rayon," a community marketplace for buying and selling products and real estate across the French Caribbean islands, applying my self-taught skills to real-world business.</div>
+            </div>
+            <div class="story-image">
+                <img src="Elements/image/story2.jpg" data-parallax-speed="90" alt="Back to Cannes">
+            </div>
+        </div>
+
+        <div class="story-row reverse">
+            <div class="story-text">
+                <h3>Professional Development</h3>
+                <div class="story-paragraph">In 2025, I decided to return to the French Riviera to formalize my expertise. I am currently pursuing my studies in Digital Project Management and Graphic Design at Sophia Ynov Campus.</div>
+            </div>
+            <div class="story-image">
+                <img src="Elements/image/story3.jpg" data-parallax-speed="90" alt="Graphic Design">
+            </div>
+        </div>
     </div>
+</section>
+
+<section id="footer">
+    <video class="footer-bg-video" src="Elements/image/bg.mp4" autoplay loop muted playsinline data-parallax-speed="50"></video>
+    
+    <div class="footer-overlay">
+        <div class="footer-branding">
+            <h1 class="footer-title">Léo TOSKU</h1>
+            <div class="footer-subtitle">UI/UX Designer</div>
+        </div>
+    </div>
+
     <div class="footer-right">
         <ul class="footer-nav">
             <li><a href="#about-me">About Me</a></li>
@@ -77,7 +123,6 @@
             <a href="#" class="social-link" target="_blank"><i class="fab fa-instagram"></i></a>
             <a href="#" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
             <a href="#" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
-            <a href="#" class="social-link" target="_blank"><i class="fab fa-behance"></i></a>
         </div>
     </div>
 </section>
