--- a/index.html
+++ b/index.html
@@ -105,24 +105,36 @@
 <section id="footer">
     <video class="footer-bg-video" src="Elements/image/bg.mp4" autoplay loop muted playsinline data-parallax-speed="50"></video>
     
-    <div class="footer-overlay">
-        <div class="footer-branding">
-            <h1 class="footer-title">Léo TOSKU</h1>
-            <div class="footer-subtitle">UI/UX Designer</div>
-        </div>
+    <div class="footer-title-mask">
+        <h1 class="big-name">Léo TOSKU</h1>
     </div>
+    
+    <div class="footer-top-links">
+        <div class="footer-col">
+            <h3>Navigation</h3>
+            <ul class="footer-links">
+                <li><a href="#header">Home</a></li>
+                <li><a href="#featured-projects">Work</a></li>
+                <li><a href="#about-me">About</a></li>
+                <li><a href="info.html">Contact</a></li>
+            </ul>
+        </div>
 
-    <div class="footer-right">
-        <ul class="footer-nav">
-            <li><a href="#about-me">About Me</a></li>
-            <li><a href="#featured-projects">Featured Projects</a></li>
-            <li><a href="info.html">Info</a></li>
-            <li><a href="#">Legal</a></li>
-        </ul>
-        <div class="social-links">
-            <a href="#" class="social-link" target="_blank"><i class="fab fa-instagram"></i></a>
-            <a href="#" class="social-link" target="_blank"><i class="fab fa-linkedin"></i></a>
-            <a href="#" class="social-link" target="_blank"><i class="fab fa-github"></i></a>
+        <div class="footer-col">
+            <h3>Socials</h3>
+            <ul class="footer-links social-labeled-links">
+                <li><a href="#" target="_blank"><i class="fab fa-instagram"></i> <span>Instagram</span></a></li>
+                <li><a href="#" target="_blank"><i class="fab fa-linkedin"></i> <span>LinkedIn</span></a></li>
+                <li><a href="#" target="_blank"><i class="fab fa-github"></i> <span>GitHub</span></a></li>
+            </ul>
+        </div>
+
+        <div class="footer-col">
+            <h3>Contact</h3>
+            <ul class="footer-links">
+                <li><a href="mailto:leotoskuepro@gmail.com">leotoskuepro@gmail.com</a></li>
+                <li><a href="tel:+330745370469">+33 07 45 37 04 69</a></li>
+            </ul>
         </div>
     </div>
 </section>
