--- a/BMGE/index.html
+++ b/BMGE/index.html
@@ -22,6 +22,7 @@
         <input id="file-input" type="file" accept=".bmg" hidden>
         <span id="file-label">No file selected</span>
       </div>
+      <div class="meta" id="file-meta"></div>
       <div id="game-config-loader" class="game-config-loader">
         <div class="game-config-bg"></div>
         <div class="game-config-content">
@@ -40,7 +41,6 @@
         </div>
       </div>
       <div id="file-warning"></div>
-      <div class="meta" id="file-meta"></div>
       <div class="search-container">
         <div class="search-wrapper">
           <i class="fas fa-search search-icon"></i>
@@ -72,6 +72,7 @@
         </div>
       </div>
       <input id="import-json-input" type="file" accept="application/json,.json" hidden>
+      <div class="status-info" id="status-info"></div>
     </section>
 
     <section class="panel" id="entries-panel">
