--- a/BMGE/index.html
+++ b/BMGE/index.html
@@ -163,7 +163,7 @@
   <div class="modal-overlay" id="delete-file-modal">
     <div class="modal-card modal-danger">
       <h3><i class="fas fa-exclamation-triangle"></i> Delete File</h3>
-      <p class="modal-desc" id="delete-file-desc">Are you sure you want to delete this file? This action cannot be undone.</p>
+      <p class="modal-desc" id="delete-file-desc">Are you sure you want to delete this file? You can undo this action.</p>
       <div class="modal-actions">
         <button id="delete-file-cancel" type="button" class="ghost">Cancel</button>
         <button id="delete-file-confirm" type="button" class="danger">Delete</button>
