--- a/Others/DIP15/desktop.html
+++ b/Others/DIP15/desktop.html
@@ -17,10 +17,8 @@
     <link rel="stylesheet" href="apps/app4/style.css">
     <link rel="stylesheet" href="apps/app5/style.css">
     <link rel="stylesheet" href="apps/app6/style.css">
-    <link rel="stylesheet" href="apps/app7/style.css">
     <link rel="stylesheet" href="apps/app8/style.css">
     <link rel="stylesheet" href="apps/app9/style.css">
-    <link rel="stylesheet" href="apps/app10/style.css">
 </head>
 <body>
     <!-- Desktop Background -->
@@ -92,7 +90,10 @@
     <!-- Background slideshow elements for desktop -->
     <div class="image-indicators" id="imageIndicators" style="display: none;"></div>
 
-    <!-- Scripts -->
+    <!-- Mark session as authenticated -->
+    <script>sessionStorage.setItem('authenticated', 'true');</script>
+
+    <!-- Core Scripts -->
     <script src="get-directory.js"></script>
     <script src="window-manager.js"></script>
     <script src="app-launcher.js"></script>
@@ -106,7 +107,6 @@
     <script src="apps/app6/app.js"></script>
     <script src="apps/app8/app.js"></script>
     <script src="apps/app9/app.js"></script>
-    <script src="apps/app10/app.js"></script>
     <script src="apps/app5/app.js"></script>
     
     <!-- Main Desktop Script -->
