--- a/Others/YnovTeamRes/TP/TP2/index.html
+++ b/Others/YnovTeamRes/TP/TP2/index.html
@@ -120,7 +120,12 @@
                             <!-- Assignee list will be populated by JavaScript -->
                         </div>
                     </div>
-                    <!-- Sub-pole selection removed from task modal -->
+                    <div class="form-group" id="taskPartieGroup" style="display:none;">
+                        <label for="taskPartieSelect" class="form-label">Partie</label>
+                        <select id="taskPartieSelect" class="form-control partie-select">
+                          <option value="">— Aucune —</option>
+                        </select>
+                    </div>
                     <div class="form-group">
                         <label for="taskDueDate" class="form-label">Date limite</label>
                         <input id="taskDueDate" type="date" class="form-control" />
