--- a/Others/YnovTeamRes/TP/TP2/index.html
+++ b/Others/YnovTeamRes/TP/TP2/index.html
@@ -28,7 +28,8 @@
             <header class="mt-3 mb-2">
                 <div class="d-flex align-items-center justify-content-between">
                     <div id="headerInfo"></div>
-                    <div class="d-flex gap-2 align-items-center">
+                    <div class="d-flex gap-2 align-items-center flex-wrap header-actions">
+                        <button class="btn btn-success btn-sm" id="newTaskBtn"><i class="fa-solid fa-plus"></i> Nouvelle tâche</button>
                         <button class="btn btn-outline-info btn-sm" onclick="showTeamModal()"><i class="fa-solid fa-users-gear"></i> Charge Équipe</button>
                         <div class="btn-group btn-group-sm" role="group">
                             <button id="viewList" class="btn btn-outline-secondary active"><i class="fa-solid fa-list-ul"></i> WBS</button>
@@ -55,14 +56,27 @@
         <div class="modal-dialog modal-dialog-centered">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h5 class="modal-title" id="modalTitle">Ressource</h5>
+                    <h5 class="modal-title" id="modalTitle">Tâche</h5>
                     <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
                 </div>
                 <div class="modal-body futuristic-form">
                     <input type="hidden" id="taskId">
+                    <div id="taskPoleGroup" class="form-group" style="display:none">
+                        <label>Pôle <span class="text-danger">*</span></label>
+                        <select id="taskPole" class="form-control"></select>
+                    </div>
                     <div class="form-group">
-                        <label>Titre</label>
+                        <label>Titre <span class="text-danger">*</span></label>
                         <input id="taskTitle" type="text" class="form-control" placeholder="Titre de la tâche">
+                    </div>
+                    <div class="form-group">
+                        <label>Statut</label>
+                        <select id="taskStatus" class="form-control">
+                            <option value="todo">À faire</option>
+                            <option value="doing">En cours</option>
+                            <option value="verify">À vérifier</option>
+                            <option value="done">Terminé</option>
+                        </select>
                     </div>
                     <div class="form-group">
                         <label>Description</label>
@@ -136,6 +150,25 @@
                         <h6>Partie WBS</h6>
                         <p id="previewPartie" class="muted-text"></p>
                     </div>
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-outline-secondary" data-bs-dismiss="modal">Fermer</button>
+                    <button type="button" class="btn btn-primary" id="previewEditBtn"><i class="fa-solid fa-pen me-1"></i> Modifier</button>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal futuristic-modal fade" id="teamWorkloadModal" tabindex="-1" aria-hidden="true">
+        <div class="modal-dialog modal-dialog-centered">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title">Charge de Travail</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="modal"></button>
+                </div>
+                <div class="modal-body" id="teamWorkloadBody"></div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Fermer</button>
                 </div>
             </div>
         </div>
