--- a/index.html
+++ b/index.html
@@ -40,10 +40,6 @@
             <span>UI/UX Designer</span>
         </div>
     </div>
-    <div class="header-status">
-        <span class="city">CANNES</span>
-        <span class="header-hour" id="header-hour">--:--</span>
-    </div>
 </section>
 
 <section id="about-me" class="about-me-section">
@@ -52,17 +48,17 @@
             As a <strong>graphic designer</strong>, I help brands and projects create unique digital experiences where <strong>creativity</strong>, <strong>precision</strong>, and <strong>functionality</strong> come together to make a lasting impact.
         </div>
         <div class="about-me-image" data-parallax-speed="95">
-            <img src="Elements/image/LéoTosku.jpg" data-parallax-speed="70" alt="Léo Tosku portrait" />
+            <img src="Elements/image/LéoTosku.png" data-parallax-speed="70" alt="Léo Tosku portrait" />
         </div>
     </div>
 </section>
 
 <div class="experience-list" id="companies-logos"></div>
 
-<section id="featured-projects" class="featured-projects-section">
-  <h2 class="title">Featured Projects</h2>
-  <div class="featured-list">
-    <!-- Les projets seront injectés ici par JS -->
+<section id="web-projects" class="web-projects-section">
+    <h2 class="title">Website Projects</h2>
+    <div class="featured-list">
+    <!-- JS injection -->
   </div>
 </section>
 
